--- a/index.html
+++ b/index.html
@@ -2,10 +2,34 @@
 <html>
 <head>
   <meta charset="UTF-8">
-  <title>My Simple Website</title>
+  <title>LINE Chat Service - ヒトとAIを結ぶ</title>
+  <style>
+    body {
+      font-family: Arial, sans-serif;
+    }
+    a {
+      text-decoration: none;
+      color: blue;
+    }
+    .container {
+      max-width: 800px;
+      margin: 0 auto;
+    }
+    img {
+      width: 100%;
+      max-width: 600px;
+      display: block;
+      margin: 20px auto;
+    }
+  </style>
 </head>
 <body>
-  <h1>Welcome to my website!</h1>
-  <p>This is a simple website hosted on GitHub Pages.</p>
+  <div class="container">
+    <h1>ヒトとAIを結ぶ - LINEチャット会話サービス</h1>
+    <img src="https://via.placeholder.com/600x400" alt="AI Chat Service">
+    <p>当サービスは、ヒトとAIを結ぶことをテーマにしたLINEチャット会話サービスです。最先端のAI技術を活用して、あなたのコミュニケーションをサポートします。</p>
+    <p>疑問や質問にAIが瞬時に答え、コミュニケーションの質を向上させるだけでなく、AIとの対話を通じて新しい発見やインスピレーションが得られるかもしれません。</p>
+    <p>さらに詳しい情報や規約については、<a href="tokutei_shotorihiki.html">特定商取引法に基づく表示</a>ページをご覧ください。</p>
+  </div>
 </body>
 </html>
