--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 <body>
   <div class="container">
     <h1>ヒトとAIを結ぶ - LINEチャット会話サービス</h1>
-    <img src="https://via.placeholder.com/600x400" alt="AI Chat Service">
+    <img src="https://amplify-chatgptlinechatbot-dev-130011-deployment.s3.ap-northeast-1.amazonaws.com/images/8CBABB51-3A37-433F-9519-800FAD92D1AA_1_201_a.jpeg" alt="AI Chat Service">
     <p>当サービスは、ヒトとAIを結ぶことをテーマにしたLINEチャット会話サービスです。最先端のAI技術を活用して、あなたのコミュニケーションをサポートします。</p>
     <p>疑問や質問にAIが瞬時に答え、コミュニケーションの質を向上させるだけでなく、AIとの対話を通じて新しい発見やインスピレーションが得られるかもしれません。</p>
     <p>さらに詳しい情報や規約については、<a href="tokutei_shotorihiki.html">特定商取引法に基づく表示</a>ページをご覧ください。</p>
